Обновил иконки трея, теперь есть визуальное исключение если пропало подключение

--- a/InkTrack Report/Properties/Resources.resx
+++ b/InkTrack Report/Properties/Resources.resx
@@ -117,4 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Alert_B" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Alert B.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Alert_W" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Alert W.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Load_B" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Load B.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Load_W" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Load W.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Printer_B" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Printer B.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Printer_W" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Printer W.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
