--- a/InkTrack Report/Properties/Resources.resx
+++ b/InkTrack Report/Properties/Resources.resx
@@ -136,4 +136,10 @@
   <data name="Printer_W" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Printer W.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Save_B" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Save-B.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Save_W" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Save-W.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
