--- a/InkTrack Report/Properties/Resources.resx
+++ b/InkTrack Report/Properties/Resources.resx
@@ -136,6 +136,9 @@
   <data name="Printer_W" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Printer W.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Proletarsk" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Proletarsk.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Save_B" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Save B.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
