--- a/InkTrack Report/Properties/Resources.resx
+++ b/InkTrack Report/Properties/Resources.resx
@@ -160,6 +160,9 @@
   <data name="Save_W" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Save W.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Search" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Search.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Write_B" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Write B.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
