--- a/InkTrack/Properties/Resources.resx
+++ b/InkTrack/Properties/Resources.resx
@@ -157,6 +157,9 @@
   <data name="Proletarsk" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Proletarsk.ttf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="Request_replace_cartrige" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Request replace cartrige.docx;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="Save_B" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Save B.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
